--- a/frontend-clinica/package.json
+++ b/frontend-clinica/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
