--- a/frontend-clinica/package.json
+++ b/frontend-clinica/package.json
@@ -22,6 +22,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.13.3",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
